fix overflow bug

--- a/src/components/body/body.css
+++ b/src/components/body/body.css
@@ -8,7 +8,7 @@
 .bodyContainer {
   padding-bottom: 71px;
   width: 100vw;
-  height: 76vh;
+  height: 75vh;
   display: flex;
   justify-content: center;
   align-items: center;
