--- a/src/global.css
+++ b/src/global.css
@@ -6,3 +6,6 @@
   margin: 0;
   box-sizing: border-box;
 }
+.App {
+  overflow: hidden;
+}
